--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
             <h2>MORENT</h2>
             <div class="search">
                 <form action="" class="">
-                    <button type="submit"><img src="assets/icons/search-icon.png" alt="search-icon"></button>
+                    <button type="submit"><img src="assets/icons/search-icon copy.png" alt="search-icon"></button>
                     <input type="text" placeholder="Search Something Here..">
-                    <button type="submit"><img src="assets/icons/filter.png" alt="filter"></button>
+                    <button type="submit"><img src="assets/icons/filter copy.png" alt="filter"></button>
                     
                 </form>
             </div> 
             <span></span>
             <span></span>
             <div class="icons">
-                <button><img src="assets/icons/likes-icon.png" alt="likes"></button>
-                <button><img src="assets/icons/notifications-icon.png" alt="notifications-icon"></button>
-                <button><img src="assets/icons/settings-icon.png" alt="settings-icon"></button>
-                <button><img src="assets/icons/Image-icon.png" alt="Profile icon"></button>
+                <button><img src="assets/icons/likes-icon copy.png" alt="likes"></button>
+                <button><img src="assets/icons/notifications-icon copy.png" alt="notifications-icon"></button>
+                <button><img src="assets/icons/settings-icon copy.png" alt="settings-icon"></button>
+                <button><img src="assets/icons/Image-icon copy.png" alt="Profile icon"></button>
             </div>
         </div>
     </header>
