--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
     </header>
     <main>
         <div class="main">
+            <div class="ads">
+                <div class="ad1">
+                    <button><img src="assets/ads/Ad1.png" alt=""></button>
+                </div>
+                <div class="ad2">
+                    <button><img src="assets/ads/Ad2.png" alt=""></button>
+                </div>
+            </div>
             
         </div>
     </main>
