--- a/index.html
+++ b/index.html
@@ -40,7 +40,17 @@
                     <button><img src="assets/ads/Ad2.png" alt=""></button>
                 </div>
             </div>
-            
+            <div class="details">
+                <div class="pick-up">
+                    <img src="assets/ads/Pick-Up.png" alt="">
+                </div>
+                <div class="shuffle">
+                    <img src="assets/ads/Switch-icon.png" alt="">
+                </div>
+                <div class="drop-off">
+                    <img src="assets/ads/Drop-Off.png" alt="">
+                </div>
+            </div>
         </div>
     </main>
 </body>
