--- a/index.html
+++ b/index.html
@@ -1,57 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/8095b9a371.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
     <title>Car Rental</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="header">
-            <h2>MORENT</h2>
-            <div class="search">
-                <form action="" class="">
-                    <button type="submit"><img src="assets/icons/search-icon copy.png" alt="search-icon"></button>
-                    <input type="text" placeholder="Search Something Here..">
-                    <button type="submit"><img src="assets/icons/filter copy.png" alt="filter"></button>
-                    
-                </form>
-            </div> 
-            <span></span>
-            <span></span>
-            <div class="icons">
-                <button><img src="assets/icons/likes-icon copy.png" alt="likes"></button>
-                <button><img src="assets/icons/notifications-icon copy.png" alt="notifications-icon"></button>
-                <button><img src="assets/icons/settings-icon copy.png" alt="settings-icon"></button>
-                <button><img src="assets/icons/Image-icon copy.png" alt="Profile icon"></button>
-            </div>
-        </div>
-    </header>
-    <main>
-        <div class="main">
-            <div class="ads">
-                <div class="ad1">
-                    <button><img src="assets/ads/Ad1.png" alt=""></button>
-                </div>
-                <div class="ad2">
-                    <button><img src="assets/ads/Ad2.png" alt=""></button>
-                </div>
-            </div>
-            <div class="details">
-                <div class="pick-up">
-                    <img src="assets/ads/Pick-Up.png" alt="">
-                </div>
-                <div class="shuffle">
-                    <img src="assets/ads/Switch-icon.png" alt="">
-                </div>
-                <div class="drop-off">
-                    <img src="assets/ads/Drop-Off.png" alt="">
+            <div class="head">
+                <div class="nav">
+                    <h2>MORENT</h2>
+                    <ul>
+                        <li><a href="">home</a></li>
+                        <li><a href="">book</a></li>
+                        <li><a href="">contact</a></li>
+                        <button class="login">login</button>
+                    </ul>
                 </div>
             </div>
         </div>
-    </main>
+</header>
+<main>
+    <div class="image">
+        <div class="form1">
+            <form class="form">
+                <h3 class="sign">SIGNUP</h3>
+                <br>
+                <input type="email" id="input" placeholder="ENTER YOUR EMAIL..">
+                <br>
+                <input type="password" id="input" placeholder="PASSWORD..">
+                <br>
+            </form>
+        </div>
+        <h3 class="writing">ARE YOU IN NEED OF A CAR FOR AN EVENT? WE ARE HERE FOR YOU!! RENT YOUR LUXURY CAR HERE!</h3>
+    </div>
+    <div class="content">
+        <div class="ads">
+            <h2 class="about">About us</h2>
+            <br>
+            <div class="tell">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est, recusandae doloremque. Corrupti a eum distinctio, expedita quia deserunt quod quos. Possimus doloribus atque repudiandae dolorem rerum incidunt dolorum minus quod omnis ipsam aperiam iusto modi, cupiditate magnam sit consequuntur sunt eaque aspernatur eligendi natus. Possimus facere soluta dolores illo dolorum saepe placeat tempora et praesentium aspernatur! Exercitationem earum dolore minus, cumque illum rem. Odio eum labore sunt aliquam cumque cum qui minus laborum odit quia! Recusandae autem molestiae illo iure quaerat cumque nobis reprehenderit dolorum ipsa modi, odit culpa accusamus! Corrupti neque possimus consequatur voluptas cumque dignissimos porro maxime in. ipsum dolor sit amet, consectetur adipisicing elit. Ab necessitatibus vitae eos aperiam, cum sed expedita doloribus harum similique dolor quaerat porro molestias laboriosam architecto, labore sequi neque. Eos, eligendi!</p>
+            </div>
+            <div class="pictures">
+                <img src="img/car5.jpeg" alt="car">
+                <img src="img/car6.jpeg" alt="car">
+                <img src="img/car6.jpeg" alt="car">
+                <img src="img/car5.jpeg" alt="car">
+            </div>
+            <br>
+        
+</main>
+<footer>
+    <p>
+        &copy;joy2023..
+    </p>
+</footer>
 </body>
 </html>
